platform/tenants/tenant1/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: tenant1
  labels:
    smescloud.com/tenant: "true"
    smescloud.com/tenant-id: "tenant1"
    smescloud.com/plan: "small"
    smescloud.com/is-tenant: "true"
    pod-security.kubernetes.io/enforce: restricted
    pod-security.kubernetes.io/enforce-version: latest
    pod-security.kubernetes.io/audit: restricted
    pod-security.kubernetes.io/warn: restricted
