platform/tenants/tenant1/networkpolicy-allow-traefik.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-from-traefik
  namespace: tenant1
spec:
  podSelector: {}
  policyTypes:
    - Ingress
  ingress:
    - from:
        - namespaceSelector:
            matchLabels:
              smescloud.com/ingress: "traefik"
          podSelector:
            matchLabels:
              app.kubernetes.io/name: traefik
